--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -316,3 +316,345 @@ a{
     }
 
 }
+
+
+
+/* CV page */
+
+#about-sc{
+    padding: 64px 0;
+}
+
+.cv-form-row-title{
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.09);
+    padding: 0.6rem 0.5rem;
+    margin-bottom: 2rem;
+    cursor: pointer;
+    
+}
+
+.cv-form-row-title h3{
+    color: black;
+    font-weight:bold;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: 1.8rem;
+    font-family: monospace;
+}
+.cv-form-row-title h3:hover{
+    font-size: 1.9rem;
+    color: blue;
+}
+
+.cv-form-blk{
+    margin: 3rem 0;
+}
+
+.cv-form-row{
+    padding: 3rem 2rem 0 2rem;
+    border: 1px solid rgba(0, 0, 0, 0.08) ;
+    margin-bottom: 1rem;
+    position: relative;
+}
+
+textarea{
+    resize: none;
+}
+
+.form-elem{
+    margin-bottom: 3rem;
+    position: relative;
+}
+
+.form-lable{
+    display: block;
+    font-weight:600;
+    font-size: 14px;
+    color: #000;
+    margin-bottom: 0.5rem;
+}
+
+.form-control{
+    border-radius: none;
+    border: 2px solid rgb(0, 0, 0, 0.1);
+    font-size: 14px;
+    padding: 0.8rem 1.6rem;
+    font-family: inherit;
+    width: 100%;
+    outline: 0;
+    transition:all;
+}
+
+.form-control:focus{
+    border-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 2px 1px rgb(186, 186, 186);
+
+}
+
+.form-text{
+    color: #ca0b00;
+    font-size: 12px;
+    position: absolute;
+    letter-spacing: 0.5px;
+    top: calc(100% + 2px);
+    left: 0;
+    width: 100%;
+}
+
+.cols-3, .cols-2{
+    display: grid;
+}
+
+.repeater-add-btn{
+    width: 25px;
+    height: 25px;
+    background-color: rgb(57, 105, 226) ;
+    font-size: 20px;
+    color: white;
+    margin: 1rem 0;
+    border: none;
+    border-radius: 25%;
+}
+
+
+
+.repeater-remove-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 999;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    color: white;
+    background-color: red;
+    border: none;
+}
+
+
+/* preview Section */
+
+.preview-cnt{
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 32% auto;
+    box-shadow: rgb(149, 157, 165, 0.2) 0px 8px 24px;
+    overflow: hidden;
+}
+
+.preview-cnt-l{
+    padding: 3rem 3rem 2rem 3rem;
+}
+
+.preview-cnt-r{
+    padding: 3rem 3rem 3rem 4rem;
+}
+
+.preview-cnt-l .preview-blk:nth-child(1){
+    text-align: center;
+}
+
+.preview-image{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.preview-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.preview-item-name{
+    font-size: 2.4rem;
+    font-weight: 600;
+    margin: 1.8rem 0;
+    position: relative;
+}
+
+.preview-item-name::after{
+    position: absolute;
+    content: "";
+    bottom: -10px;
+    width: 50px;
+    height: 1.5px;
+    background-color: rgba(255,255, 255, 0.5);
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.preview-blk{
+    padding: 1rem 0;
+    margin-bottom: 1rem;
+}
+
+.preview-blk-title h3{
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.5);
+    padding-bottom: 0.5rem;
+}
+
+.preview-blk-title{
+    margin-bottom: 1rem;
+}
+
+.preview-blk-list .preview-item{
+    font-size: 1.5rem;
+    margin-bottom: 0.2rem;
+    opacity: 0.95;
+}
+
+.preview-cnt-r .preview-blk-title{
+    color: black
+}
+
+.preview-cnt-r .preview-blk-list .preview-item{
+    margin-top: 1.8rem;
+}
+
+.achievements-items.preview-blk-list .preview-item span:first-child,
+.educations-items.preview-blk-list .preview-item span:first-child,
+.experiences-items.preview-blk-list .preview-item span:first-child,
+.projects-items.preview-blk-list .preview-item span:first-child{
+    display: block;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    background-color: rgba(0, 0, 0, 0.03);
+}
+
+.educations-items.preview-blk-list .preview-item span:nth-child(2),
+.experiences-items.preview-blk-list .preview-item span:nth-child(2){
+    font-weight: 600;
+    margin: 1rem;
+}
+
+.educations-items.preview-blk-list .preview-item span:nth-child(3),
+.experiences-items.preview-blk-list .preview-item span:nth-child(3),
+.projects-items.preview-blk-list .preview-item span:nth-child(2){
+    font-style: italic;
+    margin: 1rem;
+}
+
+.educations-items.preview-blk-list .preview-item span:nth-child(4),
+.educations-items.preview-blk-list .preview-item span:nth-child(5),
+.experiences-items.preview-blk-list .preview-item span:nth-child(4),
+.experiences-items.preview-blk-list .preview-item span:nth-child(5){
+    margin-right: 1rem;
+    background-color:  rgb(199, 199, 199);
+    padding: 0 1rem;
+    border-radius: 0.6rem;
+}
+
+.educations-items.preview-blk-list .preview-item span:nth-child(6),
+.experiences-items.preview-blk-list .preview-item span:nth-child(6){
+    font-size: 13.5px;
+    margin-top: 1rem;
+    opacity:0.8;
+    display: block;
+}
+
+.projects-items.preview-blk-list .preview-item span{
+    display: block;
+}
+
+@media screen and (min-width: 768px) {
+    .cols-3 {
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+    }
+    .cols-2 {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .cv-form-row {
+        padding: 3rem 3rem 0rem 3rem;
+    }
+    .cols-2 {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+.print-btn-sc{
+    margin: 2rem 0 6rem 0;
+}
+
+
+@media print {
+    body {
+        margin: 0;
+        padding: 0;
+        -webkit-print-color-adjust: exact; /* Chrome, Safari */
+        print-color-adjust: exact; /* Firefox */
+    }
+
+    body * {
+        visibility: hidden;
+    }
+
+    header, footer {
+        display: none;
+    }
+
+    .nonprint-area {
+        display: none;
+    }
+
+    .print_area, .print_area * {
+        visibility: visible !important;
+    }
+
+    .print_area {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        overflow: hidden;
+        /* Ensure no margin for print area */
+    }
+
+    @media print {
+        @page {
+            margin: 0; /* Remove default margin */
+            size: auto; /* Auto size the page to fit the content */
+        }
+    
+        body {
+            margin: 0;
+            padding: 0;
+            -webkit-print-color-adjust: exact; /* Chrome, Safari */
+            print-color-adjust: exact; /* Firefox */
+        }
+    
+        body * {
+            visibility: hidden;
+        }
+    
+        .print_area, .print_area * {
+            visibility: visible !important;
+        }
+    
+        .print_area {
+            width: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            overflow: hidden;
+            margin: 0; /* Ensure no margin for print area */
+        }
+    
+        /* Hide non-printable areas explicitly */
+        .nonprint-area {
+            display: none;
+
+        }
+    }
+}
